# sona

./: justfile  pyproject.toml  start.sh
sona/: __init__.py  __main__.py  data.py  engine.py  evaluator.py  ordering.py  uci.py
tests/: conftest.py  test_engine.py  test_evaluator.py  test_uci.py
