[project]
name = "sona"
version = "0.1"
requires-python = ">=3.13"

[dependency-groups]
dev = ["pytest>=8.3.5"]

[tool.ruff]
line-length = 100
lint.select = ["ALL"]
lint.ignore = ["D"]
lint.per-file-ignores = { "tests/**/*.py" = [
    "S101", # Allow asserts in tests
] }

[tool.pyright]
typeCheckingMode = "strict"
