[project]
name = "sona"
version = "0.1"
requires-python = ">=3.13"
dependencies = ["chess>=1.11.2"]

[dependency-groups]
dev = [
    "pytest-benchmark>=5.1.0",
 "pytest>=8.3.5",
]

[tool.ruff]
line-length = 100
lint.select = ["ALL"]
lint.ignore = ["D"]
lint.per-file-ignores = { "tests/**/*.py" = [
    "S101",    # Allow asserts in tests
    "PLR2004", # Allow magic values in tests
] }

[tool.pyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = "none"
